创建基本类
