# aba-api-service/src/main/java/cloud/zfwproject/abaapi/service/model/dto/user/UserQueryRequest.java
@@ -1,0 +1,56 @@
+package cloud.zfwproject.abaapi.service.model.dto.user;
+
+import cloud.zfwproject.abaapi.common.model.PageParam;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import org.springframework.format.annotation.DateTimeFormat;
+
+import java.io.Serializable;
+import java.time.LocalDateTime;
+
+/**
+ * 用户查询请求
+ *
+ * @author yupi
+ */
+@EqualsAndHashCode(callSuper = true)
+@Data
+public class UserQueryRequest extends PageParam implements Serializable {
+    /**
+     * id
+     */
+    private Long id;
+
+    /**
+     * 用户昵称
+     */
+    private String userName;
+
+    /**
+     * 账号
+     */
+    private String userAccount;
+
+    /**
+     * 性别
+     */
+    private Integer gender;
+
+    /**
+     * 用户角色: user, admin
+     */
+    private String userRole;
+
+    /**
+     * 创建时间
+     */
+    @DateTimeFormat(pattern = "yyyy-MM-dd HH:mm:ss")
+    private LocalDateTime createTime;
+
+    /**
+     * 更新时间
+     */
+    private LocalDateTime updateTime;
+
+    private static final long serialVersionUID = 1L;
+}
