# aba-api-service/src/main/java/cloud/zfwproject/abaapi/service/model/dto/user/UserUpdateRequest.java
@@ -1,0 +1,52 @@
+package cloud.zfwproject.abaapi.service.model.dto.user;
+
+import com.baomidou.mybatisplus.annotation.TableField;
+import lombok.Data;
+
+import java.io.Serializable;
+
+/**
+ * 用户更新请求
+ *
+ * @author yupi
+ */
+@Data
+public class UserUpdateRequest implements Serializable {
+    /**
+     * id
+     */
+    private Long id;
+
+    /**
+     * 用户昵称
+     */
+    private String userName;
+
+    /**
+     * 账号
+     */
+    private String userAccount;
+
+    /**
+     * 用户头像
+     */
+    private String userAvatar;
+
+    /**
+     * 性别
+     */
+    private Integer gender;
+
+    /**
+     * 用户角色: user, admin
+     */
+    private String userRole;
+
+    /**
+     * 密码
+     */
+    private String userPassword;
+
+    @TableField(exist = false)
+    private static final long serialVersionUID = 1L;
+}
