# aba-api-service/src/main/java/cloud/zfwproject/abaapi/service/model/po/InterfaceInfo.java
@@ -1,0 +1,85 @@
+package cloud.zfwproject.abaapi.service.model.po;
+
+import com.baomidou.mybatisplus.annotation.*;
+import lombok.Data;
+
+import java.io.Serializable;
+import java.time.LocalDateTime;
+
+/**
+ * 接口信息表
+ * @TableName interface_info
+ */
+@TableName(value ="interface_info")
+@Data
+public class InterfaceInfo implements Serializable {
+    /**
+     * id
+     */
+    @TableId(type = IdType.AUTO)
+    private Long id;
+
+    /**
+     * 接口名称
+     */
+    private String name;
+
+    /**
+     * 描述
+     */
+    private String description;
+
+    /**
+     * 接口地址
+     */
+    private String url;
+
+    /**
+     * 请求参数
+     */
+    private String requestParams;
+
+    /**
+     * 请求类型
+     */
+    private String method;
+
+    /**
+     * 请求头
+     */
+    private String requestHeader;
+
+    /**
+     * 响应头
+     */
+    private String responseHeader;
+
+    /**
+     * 接口状态（0-关闭 1-开启）
+     */
+    private Integer status;
+
+    /**
+     * 创建人
+     */
+    private Long userId;
+
+    /**
+     * 创建时间
+     */
+    private LocalDateTime createTime;
+
+    /**
+     * 更新时间
+     */
+    private LocalDateTime updateTime;
+
+    /**
+     * 是否删除
+     */
+    @TableLogic
+    private Integer isDelete;
+
+    @TableField(exist = false)
+    private static final long serialVersionUID = 1L;
+}
