# aba-api-service/src/main/java/cloud/zfwproject/abaapi/service/model/po/UserInterfaceInfo.java
@@ -1,0 +1,65 @@
+package cloud.zfwproject.abaapi.service.model.po;
+
+import com.baomidou.mybatisplus.annotation.*;
+import lombok.Data;
+
+import java.io.Serializable;
+import java.time.LocalDateTime;
+
+/**
+ * 用户接口关系表
+ * @TableName user_interface_info
+ */
+@TableName(value ="user_interface_info")
+@Data
+public class UserInterfaceInfo implements Serializable {
+    /**
+     * id
+     */
+    @TableId(type = IdType.AUTO)
+    private Long id;
+
+    /**
+     * 调用用户
+     */
+    private Long userId;
+
+    /**
+     * 接口信息
+     */
+    private Long interfaceInfoId;
+
+    /**
+     * 调用次数
+     */
+    private Integer totalNum;
+
+    /**
+     * 剩余调用次数
+     */
+    private Integer leftNum;
+
+    /**
+     * 0-正常 1-禁用
+     */
+    private Integer status;
+
+    /**
+     * 创建时间
+     */
+    private LocalDateTime createTime;
+
+    /**
+     * 更新时间
+     */
+    private LocalDateTime updateTime;
+
+    /**
+     * 是否删除
+     */
+    @TableLogic
+    private Integer isDelete;
+
+    @TableField(exist = false)
+    private static final long serialVersionUID = 1L;
+}
