# aba-api-service/src/main/resources/static/doc/openapi.json
@@ -1,6 +1,7 @@
 {
   "components": {
     "schemas": {
+      "_user_pagerequest": {},
       "_user_registerresponse": {
         "properties": {
           "success": {
@@ -106,6 +107,129 @@
           }
         }
       },
+      "_user_pageresponse": {
+        "properties": {
+          "success": {
+            "format": "boolean",
+            "description": "响应成功",
+            "type": "boolean"
+          },
+          "data": {
+            "description": "响应数据(object)",
+            "type": "object",
+            "properties": {
+              "pages": {
+                "description": "当前分页总页数"
+              },
+              "records": {
+                "description": "查询数据列表",
+                "type": "array",
+                "items": {
+                  "properties": {
+                    "id": {
+                      "description": "id"
+                    },
+                    "userName": {
+                      "format": "string",
+                      "description": "用户昵称",
+                      "type": "string"
+                    },
+                    "userAccount": {
+                      "format": "string",
+                      "description": "账号",
+                      "type": "string"
+                    },
+                    "userAvatar": {
+                      "format": "string",
+                      "description": "用户头像",
+                      "type": "string"
+                    },
+                    "gender": {
+                      "description": "性别"
+                    },
+                    "userRole": {
+                      "format": "string",
+                      "description": "用户角色: user, admin",
+                      "type": "string"
+                    },
+                    "createTime": {
+                      "description": "创建时间(object)",
+                      "type": "object"
+                    },
+                    "updateTime": {
+                      "description": "更新时间(object)",
+                      "type": "object"
+                    }
+                  }
+                }
+              },
+              "total": {
+                "description": "总数"
+              },
+              "size": {
+                "description": "每页显示条数，默认 10"
+              },
+              "current": {
+                "description": "当前页"
+              },
+              "orders": {
+                "description": "排序字段信息",
+                "type": "array",
+                "items": {
+                  "properties": {
+                    "column": {
+                      "format": "string",
+                      "description": "需要进行排序的字段",
+                      "type": "string"
+                    },
+                    "asc": {
+                      "format": "boolean",
+                      "description": "是否正序排列，默认 true",
+                      "type": "boolean"
+                    }
+                  }
+                }
+              },
+              "optimizeCountSql": {
+                "format": "boolean",
+                "description": "自动优化 COUNT SQL",
+                "type": "boolean"
+              },
+              "searchCount": {
+                "format": "boolean",
+                "description": "是否进行 count 查询",
+                "type": "boolean"
+              },
+              "optimizeJoinOfCountSql": {
+                "format": "boolean",
+                "description": "{@link #optimizeJoinOfCountSql()}",
+                "type": "boolean"
+              },
+              "countId": {
+                "format": "string",
+                "description": "countId",
+                "type": "string"
+              },
+              "maxLimit": {
+                "description": "countId"
+              }
+            }
+          },
+          "code": {
+            "format": "string",
+            "description": "响应状态码",
+            "type": "string"
+          },
+          "message": {
+            "format": "string",
+            "description": "响应信息",
+            "type": "string"
+          },
+          "timestamp": {
+            "description": "响应时间戳"
+          }
+        }
+      },
       "_user_account__userAccount_request": {},
       "_user_registerrequest": {
         "properties": {
@@ -140,6 +264,147 @@
   ],
   "openapi": "3.0.3",
   "paths": {
+    "/user/page": {
+      "get": {
+        "summary": "分页获取用户数据",
+        "deprecated": false,
+        "description": "分页获取用户数据",
+        "tags": [
+          "UserController"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/_user_pageresponse"
+                },
+                "examples": {
+                  "json": {
+                    "summary": "test data",
+                    "value": "{\n  \"success\": true,\n  \"data\": {\n    \"pages\": 938,\n    \"records\": [\n      {\n        \"id\": 565,\n        \"userName\": \"jerald.jacobson\",\n        \"userAccount\": \"q0zz5p\",\n        \"userAvatar\": \"qrlqwi\",\n        \"gender\": 1,\n        \"userRole\": \"4v9b36\",\n        \"createTime\": \"2023-03-12 20:24:36\",\n        \"updateTime\": \"2023-03-12 20:24:36\"\n      }\n    ],\n    \"total\": 270,\n    \"size\": 923,\n    \"current\": 383,\n    \"orders\": [\n      {\n        \"column\": \"a8qb3i\",\n        \"asc\": true\n      }\n    ],\n    \"optimizeCountSql\": true,\n    \"searchCount\": true,\n    \"optimizeJoinOfCountSql\": true,\n    \"countId\": \"177\",\n    \"maxLimit\": 694\n  },\n  \"code\": \"89517\",\n  \"message\": \"success\",\n  \"timestamp\": 1678623876670\n}"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "operationId": "getUserPage",
+        "parameters": [
+          {
+            "schema": {
+              "type": "object"
+            },
+            "in": "query",
+            "description": "当前页码",
+            "required": false,
+            "example": "573",
+            "name": "current"
+          },
+          {
+            "schema": {
+              "type": "object"
+            },
+            "in": "query",
+            "description": "页面大小",
+            "required": false,
+            "example": "311",
+            "name": "pageSize"
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "description": "排序字段",
+            "required": false,
+            "example": "rx7stb",
+            "name": "sortField"
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "description": "排序顺序（默认升序）",
+            "required": false,
+            "example": "luo346",
+            "name": "sortOrder"
+          },
+          {
+            "schema": {
+              "type": "object"
+            },
+            "in": "query",
+            "description": "id",
+            "required": false,
+            "example": "276",
+            "name": "id"
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "description": "用户昵称",
+            "required": false,
+            "example": "jerald.jacobson",
+            "name": "userName"
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "description": "账号",
+            "required": false,
+            "example": "vk92e8",
+            "name": "userAccount"
+          },
+          {
+            "schema": {
+              "type": "object"
+            },
+            "in": "query",
+            "description": "性别",
+            "required": false,
+            "example": "1",
+            "name": "gender"
+          },
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "query",
+            "description": "用户角色: user, admin",
+            "required": false,
+            "example": "68ksjf",
+            "name": "userRole"
+          },
+          {
+            "schema": {
+              "type": "object"
+            },
+            "in": "query",
+            "description": "创建时间",
+            "required": false,
+            "example": "2023-03-12 20:24:36",
+            "name": "createTime"
+          },
+          {
+            "schema": {
+              "type": "object"
+            },
+            "in": "query",
+            "description": "更新时间",
+            "required": false,
+            "example": "2023-03-12 20:24:36",
+            "name": "updateTime"
+          }
+        ]
+      }
+    },
     "/user/register": {
       "post": {
         "summary": "用户注册",
@@ -157,7 +422,7 @@
               "examples": {
                 "json": {
                   "summary": "test data",
-                  "value": "{\n  \"userPassword\": \"cmx04r\",\n  \"repeatPassword\": \"2c5ljx\",\n  \"userAccount\": \"pwsnmi\"\n}"
+                  "value": "{\n  \"userPassword\": \"jddmyh\",\n  \"repeatPassword\": \"mwax8g\",\n  \"userAccount\": \"cl4l7l\"\n}"
                 }
               }
             }
@@ -174,7 +439,7 @@
                 "examples": {
                   "json": {
                     "summary": "test data",
-                    "value": "{\n  \"success\": true,\n  \"data\": 774,\n  \"code\": \"13271\",\n  \"message\": \"success\",\n  \"timestamp\": 1678608060519\n}"
+                    "value": "{\n  \"success\": true,\n  \"data\": 457,\n  \"code\": \"89517\",\n  \"message\": \"success\",\n  \"timestamp\": 1678623876670\n}"
                   }
                 }
               }
@@ -204,7 +469,7 @@
                 "examples": {
                   "json": {
                     "summary": "test data",
-                    "value": "{\n  \"success\": true,\n  \"data\": {\n    \"id\": 668,\n    \"userName\": \"antony.daugherty\",\n    \"userAccount\": \"86f86e\",\n    \"userAvatar\": \"bml0qa\",\n    \"gender\": 0,\n    \"userRole\": \"waxxuo\",\n    \"userPassword\": \"7h4c43\",\n    \"accessKey\": \"g75c1m\",\n    \"secretKey\": \"7x60t6\",\n    \"createTime\": \"2023-03-12 16:01:00\",\n    \"updateTime\": \"2023-03-12 16:01:00\",\n    \"isDelete\": 317\n  },\n  \"code\": \"13271\",\n  \"message\": \"success\",\n  \"timestamp\": 1678608060519\n}"
+                    "value": "{\n  \"success\": true,\n  \"data\": {\n    \"id\": 328,\n    \"userName\": \"jerald.jacobson\",\n    \"userAccount\": \"edskaw\",\n    \"userAvatar\": \"j1i20k\",\n    \"gender\": 1,\n    \"userRole\": \"s88h5r\",\n    \"userPassword\": \"wvrcop\",\n    \"accessKey\": \"tf5y6q\",\n    \"secretKey\": \"7h5jsd\",\n    \"createTime\": \"2023-03-12 20:24:36\",\n    \"updateTime\": \"2023-03-12 20:24:36\",\n    \"isDelete\": 774\n  },\n  \"code\": \"89517\",\n  \"message\": \"success\",\n  \"timestamp\": 1678623876670\n}"
                   }
                 }
               }
@@ -220,7 +485,7 @@
             "in": "path",
             "description": "用户账号",
             "required": true,
-            "example": "hapzsq",
+            "example": "m5631j",
             "name": "userAccount"
           }
         ]
